--- a/contactinfo.html
+++ b/contactinfo.html
@@ -20,6 +20,25 @@
 </ul>
 </nav>
  </header> 
+
+
+  <div class="container">
+    <div class="row">
+        <div class="col-md-5">
+            <h1> Personal </h1>
+           <p>Name - Sophie Nicholas </p> 
+            <p>Phone number - 0447400777 </p>
+           <p>Address -  2000, road road, Park Park, 5000</p>
+        </div>
+        <div class="col-md-5"> <h1> Social Media </h1>
+        <ul> <li>  Instagram <img src="images/insta.png" alt="instagram logo"> @aboutmeinsta </li> 
+       <li> Facebook <img src="images/facebook.png" alt="facebook logo"> About me Facebook </li> 
+        <li> Twitter <img src="images/twitter.png" alt="twitter logo"> @aboutmetwitter </li> </ul> 
+    </div>
+    </div>
+   
+
+
   </body>
   </html>
   
