--- a/index.html
+++ b/index.html
@@ -22,14 +22,25 @@
     </nav>
   </header>
 
-  
-  <div class="container">
-     <div class="row1">
-      <div class="col-md-6">
-        Welcome to my about me page 
-      </div>
-      <div class="col-md-6">
-       <img src="images/mainpic.png" alt="girl wearing glasses"> 
-      </div>
-     </div>
-</html>
+ 
+<div class="container">
+  <div class="row">
+   <div class="col-m-4" id="main">
+          <div class="row">
+               <div class="col-xs-4">Hello! Welcome to my about me page</div> </div>
+          <div class="row">   
+                <div class="col-xs-4">this page contains all of my contact information</div>  </div>
+         <div class="row">
+                 <div class="col-xs-4">and</div> </div>
+    <div class="row">   
+        <div class="col-xs-4">my portfolio</div> </div>
+    </div>
+      <div class="col-m-8" id="sticky-sidebar">
+        <img src="images/mainpic.png" alt="girl in glass">
+      </div> 
+    </div>
+</div>
+
+
+</body>
+  </html>
