--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,18 @@
 <li> <a href="portfolio.html">Portfolio</a></li>
 </ul>
 </nav>
- </header> 
+ </header>
+ 
+ <div class="wrapper">
+    <div class="box a"> <h1>  Assignment #1 </h1></div>
+    <div class="box b"> <h1> Assignment #2 </h1> </div>
+    <div class="box c"> <h1> Assignment #3 </h1> </div>
+    <div class="box d">  <h1> Assignment #4 </h1> </div>
+    </div>
+  </div>
+
+
+
   </body>
   </html>
   
