--- a/index.html
+++ b/index.html
@@ -27,14 +27,18 @@
   <div class="row">
    <div class="col-m-4" id="main">
           <div class="row">
-               <div class="col-xs-4">Hello! Welcome to my about me page</div> </div>
+               <div class="col-xs-4">Hello!</div> </div>
           <div class="row">   
-                <div class="col-xs-4">this page contains all of my contact information</div>  </div>
+                <div class="col-xs-4">welcome to my about me website</div>  </div>
          <div class="row">
-                 <div class="col-xs-4">and</div> </div>
-    <div class="row">   
-        <div class="col-xs-4">my portfolio</div> </div>
-    </div>
+                 <div class="col-xs-4">this website has </div> </div>
+         <div class="row">   
+                 <div class="col-xs-4">my portfolio & </div> </div>
+          <div class="row">
+              <div class="col-xs-4"> contact information</div> </div> 
+           <div class="row">
+                <div class="col-xs-4">Enjoy</div> </div>
+           </div>
       <div class="col-m-8" id="sticky-sidebar">
         <img src="images/mainpic.png" alt="girl in glass">
       </div> 
