--- a/contactinfo.html
+++ b/contactinfo.html
@@ -1,44 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
 
-  
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-      <link rel="stylesheet" href="contactinfo.css">  
-      <title>Document</title>
-  </head>
-  <body>
- <header>
-<h1> Contact Information </h1>
-<nav>
-<ul class="nav">
-<li> <a href="index.html">About me</a></li>
-<li> <a href="contactinfo.html"> Contact info </li>
-<li> <a href="portfolio.html">Portfolio</a></li>
-</ul>
-</nav>
- </header> 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="contactinfo.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <header>
+        <h1> Contact Information </h1>
+        <nav>
+            <ul class="nav">
+                <li> <a href="index.html">About me</a></li>
+                <li> <a href="contactinfo.html"> Contact info </a> </li>
+                <li> <a href="portfolio.html">Portfolio</a></li>
+            </ul>
+        </nav>
+    </header>
 
 
-  <div class="container">
-    <div class="row">
-        <div class="col-md-5">
-            <h1> Personal </h1>
-           <p>Name - Sophie Nicholas </p> 
-            <p>Phone number - 0447400777 </p>
-           <p>Address -  2000, road road, Park Park, 5000</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5">
+                <h1> Personal </h1>
+                <p>Name - Sophie Nicholas </p>
+                <p>Phone number - 0447400777 </p>
+                <p>Address - 2000, road road, Park Park, 5000</p>
+            </div>
+            <div class="col-md-5">
+                <h1> Social Media </h1>
+                <ul>
+                    <li> Instagram <img src="images/insta.png" alt="instagram logo"> @aboutmeinsta </li>
+                    <li> Facebook <img src="images/facebook.png" alt="facebook logo"> About me Facebook </li>
+                    <li> Twitter <img src="images/twitter.png" alt="twitter logo"> @aboutmetwitter </li>
+                </ul>
+            </div>
         </div>
-        <div class="col-md-5"> <h1> Social Media </h1>
-        <ul> <li>  Instagram <img src="images/insta.png" alt="instagram logo"> @aboutmeinsta </li> 
-       <li> Facebook <img src="images/facebook.png" alt="facebook logo"> About me Facebook </li> 
-        <li> Twitter <img src="images/twitter.png" alt="twitter logo"> @aboutmetwitter </li> </ul> 
-    </div>
-    </div>
-   
 
 
-  </body>
-  </html>
-  
+
+</body>
+
+</html>
