--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="index.css">
@@ -12,39 +14,58 @@
 
 <body>
   <header>
-    <h1> About Me </h1>
+    <h1> Abut me</h1>
     <nav>
       <ul class="nav">
-        <li> <a href="index.html"> About me</li>
-        <li> <a href="contactinfo.html"> Contact info </li>
+        <li> <a href="index.html">About me </a></li>
+        <li> <a href="contactinfo.html"> Contact info </a> </li>
         <li> <a href="portfolio.html">Portfolio</a></li>
       </ul>
     </nav>
   </header>
 
- 
-<div class="container">
-  <div class="row">
-   <div class="col-m-4" id="main">
-          <div class="row">
-               <div class="col-xs-4">Hello!</div> </div>
-          <div class="row">   
-                <div class="col-xs-4">welcome to my about me website</div>  </div>
-         <div class="row">
-                 <div class="col-xs-4">this website has </div> </div>
-         <div class="row">   
-                 <div class="col-xs-4">my portfolio & </div> </div>
-          <div class="row">
-              <div class="col-xs-4"> contact information</div> </div> 
-           <div class="row">
-                <div class="col-xs-4">Enjoy</div> </div>
-           </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-m-4" id="main">
+        <div class="row">
+          <div class="col-xs-4">Hello!</div>
+        </div>
+        <div class="row">
+          <div class="col-xs-4">welcome to my about me website</div>
+        </div>
+        <div class="row">
+          <div class="col-xs-4">this website has </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-4">my portfolio & </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-4"> contact information</div>
+        </div>
+        <div class="row">
+          <div class="col-xs-4">Enjoy</div>
+        </div>
+      </div>
       <div class="col-m-8" id="sticky-sidebar">
-        <img src="images/mainpic.png" alt="girl in glass">
-      </div> 
+        <img src="images/mainpic.png" alt="girl in glass"> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Minus, porro et magni sequi sit eum magnam vero quod nostrum, architecto obcaecati repudiandae iste impedit
+        voluptatibus ducimus quisquam odit voluptates distinctio ad dignissimos eligendi non ratione? Qui dolor tempora
+        quibusdam culpa obcaecati saepe labore suscipit assumenda excepturi, molestias possimus, quae nisi, non facilis
+        fugiat! Praesentium provident ad veniam debitis ab incidunt sequi velit nulla ullam rem tempora nam culpa ea aut
+        earum hic reprehenderit aperiam sint perspiciatis maiores, facilis facere. Nisi nostrum quaerat magni tenetur,
+        excepturi hic minus ducimus dolor nulla? Maxime eos consequuntur non error maiores, assumenda itaque illo quis
+        sequi? Doloremque eligendi, similique vero, accusamus quisquam sint vel amet cumque quibusdam ea architecto,
+        molestiae odit consectetur iure ducimus non maiores quo qui asperiores a iste tempora. Labore nostrum neque illo
+        laborum! Voluptatem, quos distinctio unde exercitationem sint earum expedita ratione id recusandae at repellat
+        optio ipsum nisi reiciendis pariatur esse officiis. Molestiae in, dolore praesentium eius ipsam modi fugit
+        doloremque explicabo dolor obcaecati asperiores veniam placeat? Doloremque tempore eveniet maiores fugiat
+        mollitia minus reprehenderit commodi natus cum quae illum et, delectus debitis laboriosam atque necessitatibus
+        repellendus doloribus totam illo soluta distinctio. Possimus repudiandae, ea cumque eum ullam deleniti
+        voluptate!
+      </div>
     </div>
-</div>
-
-
+  </div>
 </body>
-  </html>
+
+</html>
