--- a/portfolio.html
+++ b/portfolio.html
@@ -1,35 +1,45 @@
- 
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-      <link rel="stylesheet" href="portfolio.css">  
-      <title>Document</title>
-  </head>
-  <body>
- <header>
-<h1> My Portfolio </h1>
-<nav>
-<ul class="nav">
-<li> <a href="index.html">About me</a></li>
-<li> <a href="contactinfo.html"> Contact info </li>
-<li> <a href="portfolio.html">Portfolio</a></li>
-</ul>
-</nav>
- </header>
- 
- <div class="wrapper">
-    <div class="box a"> <h1>  Assignment #1 </h1></div>
-    <div class="box b"> <h1> Assignment #2 </h1> </div>
-    <div class="box c"> <h1> Assignment #3 </h1> </div>
-    <div class="box d">  <h1> Assignment #4 </h1> </div>
-    </div>
-  </div>
+ <!DOCTYPE html>
+ <html lang="en">
+
+ <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+     <link rel="stylesheet" href="portfolio.css">
+     <title>Document</title>
+ </head>
+
+ <body>
+     <header>
+         <h1> My Portfolio </h1>
+         <nav>
+             <ul class="nav">
+                 <li> <a href="index.html">About me</a></li>
+                 <li> <a href="contactinfo.html"> Contact info </a> </li>
+                 <li> <a href="portfolio.html">Portfolio</a></li>
+             </ul>
+         </nav>
+     </header>
+
+     <div class="wrapper">
+         <div class="box a">
+             <h1> Assignment #1 </h1>
+         </div>
+         <div class="box b">
+             <h1> Assignment #2 </h1>
+         </div>
+         <div class="box c">
+             <h1> Assignment #3 </h1>
+         </div>
+         <div class="box d">
+             <h1> Assignment #4 </h1>
+         </div>
+     </div>
+     </div>
 
 
 
-  </body>
-  </html>
-  
+ </body>
+
+ </html>
